# rutaceae

./: .gitignore  README.md  grammer.lark  output  pyproject.toml  run.py
core/pipeline/: ast.py  codegen.py  nodes.py  parser.py
programs/: test.rut  test10.rut  test11.rut  test12.rut  test13.rut  test14.rut  test15.rut  test16.rut  test17.rut  test18.rut  test19.rut  test2.rut  test20.rut  test21.rut  test22.rut  test23.rut  test24.rut  test25.rut  test26.rut  test27.rut  test28.rut  test3.rut  test4.rut  test5.rut  test6.rut  test7.rut  test8.rut  test9.rut  test_casting.rut  test_multi_func.rut  test_params.rut  test_recursion.rut  test_scope.rut
