[tool.poetry]
name = "rutaceae-compiler"
version = "0.1.0"
description = "A Compiler made for the Rutaceae Language"
authors = ["Legendyboi <legendyboi.dev@proton.me>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lark = "^1.1.9"
rich = "^13.7.1"
llvmlite = "^0.42.0"
typer = "^0.12.3"

[tool.poetry.group.dev.dependencies]
lark = "^1.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
